// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI test <Button /> 1`] = `
<button
  class="btn undefined"
>
  Test
</button>
`;

exports[`UI test <ButtonLink /> 1`] = `
<button
  class="btn undefined"
  type="button"
>
  Test BtnLink
</button>
`;

exports[`UI test <CardCart /> 1`] = `
<div
  class="description"
>
  Test description
</div>
`;

exports[`UI test <CardCart /> 2`] = `
<h3>
  12.99
</h3>
`;
